Enhance authentication and routing: add protected routes, update auth middleware, and improve user data handling

--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,24 @@
-// filepath: client/index.html
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Ensure proper scaling on mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- SEO: Title, Description, and Keywords -->
     <title>Chat App</title>
+    <meta name="description" content="A real-time chat application with authentication and live messaging." />
+    <meta name="keywords" content="chat, realtime, messaging, authentication, react, socket.io" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" />
+
+    <!-- Optional: Social Media Sharing Metadata -->
+    <meta property="og:title" content="Chat App" />
+    <meta property="og:description" content="A real-time chat application with authentication and live messaging." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:image" content="/path/to/your/og-image.jpg" />
   </head>
   <body>
     <div id="root"></div>
